--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ src/swig/csharp/src_swig/*
 src/swig/perl/blib/*
 *.dylib
 src/swig/java/src_swig
+src/swig/.python
+src/swig/python/mlt.i
+src/swig/python/mlt.py
 disable-*
 mlt.config
 mlt.creator
